--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test trainig for node",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env PORT=5000 NODE_ENV=production INFO='new srting' node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Georg",
   "license": "ISC",
